# negia_llm

./: .env.clé_api  README.md  app.py  pyproject.toml
data/: history.json  intro.json  scenarios.json
models/: llm_grop.py  llm_groq.py
prompts/: sell_prompt.txt  seller.txt
utils/: evaluator.py  memory.py
